# lgg

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ex_custom_record_logger.cpp
include/lgg/: logger.h  logger_callback.h  logger_command.h  logger_concepts.h  logger_exception.h  logger_filter.h  logger_options.h  logger_ostream.h  logger_record.h
